--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,15 @@
 gems:
   - jekyll-paginate
   - jekyll-gist
+  - jekyll-multiple-languages-plugin
 
 # Site settings
 title: String Labs
 email: gustav.simonsson@gmail.com
 description: "string labs"
+lang: en
+languages: ["en", "cn"]
+exclude_from_localizations: ["_posts"]
 github_username: string-labs
 
 # Build settings
@@ -23,6 +27,8 @@ host: 0.0.0.0
 paginate: 5
 paginate_path: "/news/page-:num/"
 # Build settings
+
+# Author info
 authors:
     dominicw:
         display_name: Dom Williams
