--- a/_i18n/cn.yml
+++ b/_i18n/cn.yml
@@ -1,7 +1,7 @@
 global:
     chinese: "中文"
     english: "English"
-    japanese: "日本语"
+    japanese: "日本語"
 index: 
     hero-title: "高级分布式协议与应用"
     hero-subtitle: "String实验室一个密码学和分布式计算的研发、孵化和投资机构."
