--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,7 +1,7 @@
 global:
     chinese: "中文"
     english: "English"
-    japanese: "日本语"
+    japanese: "日本語"
 index: 
     hero-title: "ADVANCED DECENTRALIZED PROTOCOLS & DAPPS"
     hero-subtitle: "String Labs is a crypto studio, incubator and investor."
