Changed all dekc links to speakerdeck as Google drive is firewalled in China

--- a/_i18n/cn.yml
+++ b/_i18n/cn.yml
@@ -14,14 +14,16 @@ index:
     projects-subtitle: " "
     projects-dfinity-subtitle: "无限度可信任计算"
     projects-dfinity-intro: "DFINITY 是一个开放式的虚拟区块链计算机和技术。她延伸了Etheruem 以太坊生态链到广泛的商业应用场景中。我们的创新包括公链上首创的智能治理机制 - “区块链神经系统”，私链智能合约可直接调用公链合约，以及第三代区块链协议技术 - 比上一代（以太坊）提升二十倍以上的确认速度和无限吞吐扩容能力。"
-    projects-dfinity-deck-en: "DFINITY发布会幻灯片(全球区块链峰会)"
-    projects-dfinity-deck-cn: "DFINITY发布会幻灯片-中文"
-    projects-dfinity-deck-ja: "DFINITY发布会幻灯片-日语"
+    projects-dfinity-deck-en: "DFINITY发布会幻灯片 @全球区块链峰会"
+    projects-dfinity-deck-cn: "中文版"
+    projects-dfinity-deck-ja: "日语版"
     projects-dfinity-video-1: "技术视频：阀值接力链"
     projects-phi-subtitle: "去中心化商业银行与稳定货币"
     projects-phi-intro: "今天的商业银行面临着严峻的结构性挑战，实体运营基础设施、大量冗余员工以及合规流程等有着天然的高昂成本，现有的银行机制又屡屡产生大量的不良贷款对经济产生巨大冲击，乃至引发08年的次贷危机。不仅如此，许多商业银行更利用其垄断地位阻碍其他金融创新的步伐。Phi系统重新架构了一个由智能合约系统构成的自治借贷系统 - 这个系统依赖算法和一个开放式的贷款验证人网络来进行放贷，其可靠度放远超传统借贷机制。同时，类似于传统商业银行创造货币一样，Phi自治借贷系统能够在区块链上创造原生的稳定货币（如美元，欧元，人民币等）供所有用户使用。"
     projects-phi-deck-en: "Phi 发布会幻灯片-英文"
-    projects-phi-deck-cn: "Phi 发布会幻灯片-中文"
+    projects-phi-deck-cn: "中文版"
+    projects-phi-deck-jp: "日语版"
+
     projects-phi-video: "Phi发布会视频 (以太坊DevCon开发者大会)"
     projects-other-title: "其他项目"
     projects-other-subtitle: "合资项目、矿力支持和私有区块链云"
