--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -14,15 +14,15 @@ index:
     projects-subtitle: "Just in case you are wondering."
     projects-dfinity-subtitle: "Infinite Trust Machine"
     projects-dfinity-intro: DFINITY is an open virtual blockchain computer and technology that extends and refocuses the Ethereum ecosystem for business. Innovations include open chain governance using a "Blockchain Nervous System", private chains with smart contracts that can directly call into contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide a roadmap to infinite scalability.
-    projects-dfinity-deck-en: "DFINITY deck (Summit after Devcon2)"
-    projects-dfinity-deck-cn: "DFINITY deck in Chinese"
-    projects-dfinity-deck-ja: "DFINITY deck in Japanese"
+    projects-dfinity-deck-en: "DFINITY announcement @Blockchain Global Summit"
+    projects-dfinity-deck-cn: "Chinese"
+    projects-dfinity-deck-ja: "Japanese"
     projects-dfinity-video-1: Video relating to "threshold relay" chains
     projects-phi-subtitle: "Decentralized commercial banking and stable currency"
     projects-phi-intro: "Today's commercial banking system faces critical challenges that it cannot solve. These include the vast costs of branches, staff, infrastructure and compliance processes, chronic bad judgement when originating loans that leads to hugely costly bailouts, and a monopolistic tendency to impede desperately needed socially impactful financial innovation. Imagine then if commercial banks could be entirely replaced with autonomous smart contracts that use algorithms and open networks of human validators to give out loans more reliably, and if this created stable, fiat-like cryptocurrency as a side effect."
     projects-phi-deck-en: "Phi Deck"
-    projects-phi-deck-cn: "Phi Deck (Chinese)"
-    projects-phi-video: "Phi Video (DevCon 2)"
+    projects-phi-deck-cn: "Chinese"
+    projects-phi-video: "Phi Announcement Video (DevCon 2)"
     projects-other-title: "Others"
     projects-other-subtitle: "Joint ventures, fintech, mining..."
     projects-other-intro: "While DFINITY and PHI are our headline open protocol projects we have numerous projects in stealth at any one time and work with partners in industry either in joint venture or consultancy capacities. Furthermore, we aim to participate commercially in the open ecosystems that we help found. For example, String Labs plans to be a major miner of the DFINITY network, and also provide hosting of DFINITY private chains for corporate partners."
