minor fixes to deck links and add lang icon at top right

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -14,7 +14,7 @@ index:
     projects-subtitle: "Just in case you are wondering."
     projects-dfinity-subtitle: "Infinite Trust Machine"
     projects-dfinity-intro: DFINITY is an open virtual blockchain computer and technology that extends and refocuses the Ethereum ecosystem for business. Innovations include open chain governance using a "Blockchain Nervous System", private chains with smart contracts that can directly call into contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide a roadmap to infinite scalability.
-    projects-dfinity-deck-en: "DFINITY announcement @Blockchain Global Summit"
+    projects-dfinity-deck-en: "DFINITY Deck @ Blockchain Summit"
     projects-dfinity-deck-cn: "Chinese"
     projects-dfinity-deck-ja: "Japanese"
     projects-dfinity-video-1: Video relating to "threshold relay" chains
