--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -14,14 +14,14 @@ index:
     projects-subtitle: "知りたい方のために。"
     projects-dfinity-subtitle: "無限トラストマシーン"
     projects-dfinity-intro: "DFINITYはオープンバーチャルブロックチェーンコンピュターで、Ethereumをビジネスエリアへと拡張する事を可能にするテクノロジーです。イノベーション／革新の一部は、Blockchain Nervous System”という、オープンチェーンのガバナンス／合意形式システムをはじめ、プライベートチェーンから、パッブリックチェーンとのスマートコントラクトを可能にし、さらに、第三次クリプトのプロトコルで今までのバーチャルマシーンよりも２０倍のスピードと、無限のスケーラビリティーを可能にしました"
-    projects-dfinity-deck-en: "DFINITYデッキ　（英語）"
-    projects-dfinity-deck-cn: "DFINITYデッキ　（中国語）"
-    projects-dfinity-deck-ja: "DFINITYデッキ　（日本語）"
+    projects-dfinity-deck-en: "DFINITYデッキ　[英語]"
+    projects-dfinity-deck-cn: "中国語"
+    projects-dfinity-deck-ja: "日本語"
     projects-dfinity-video-1: "threshold relay”チェーンに関係するビデオ"
     projects-phi-subtitle: "分散商業銀行システムと安定した通貨"
     projects-phi-intro: "Today's commercial banking system faces critical challenges that it cannot solve. These include the vast costs of branches, staff, infrastructure and compliance processes, chronic bad judgement when originating loans that leads to hugely costly bailouts, and a monopolistic tendency to impede desperately needed socially impactful financial innovation. Imagine then if commercial banks could be entirely replaced with autonomous smart contracts that use algorithms and open networks of human validators to give out loans more reliably, and if this created stable, fiat-like cryptocurrency as a side effect."
     projects-phi-deck-en: "Phiデッキ "
-    projects-phi-deck-cn: ""
+    projects-phi-deck-cn: "中国語"
     projects-phi-video: "Phi ビデオ (DevCon 2のイベントより)"
     projects-other-title: "その他"
     projects-other-subtitle: "合弁事業、フィンテック、マイニング。。。"
