--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -4,52 +4,52 @@ global:
     japanese: "日本語"
 index:
     hero-title: "先進分散プロトコル＆分散アプリケーション"
-    hero-subtitle: "String Labsはクリプト専門のスタジオ、インジュベーター、投資家"
+    hero-subtitle: "String Labsはクリプト専門のスタジオ、インジュベーター、投資家。"
     navbar-projects: "プロジェクト"
     navbar-team: "チーム"
     navbar-investors: "投資家"
-    navbar-contact: "コンタクト／お問い合わせ／連絡先"
-    navbar-news: "最新情報／ニュース"
+    navbar-contact: "お問い合わせ"
+    navbar-news: "最新情報"
     projects-title: "やっている事"
     projects-subtitle: "知りたい方のために。"
     projects-dfinity-subtitle: "無限トラストマシーン"
-    projects-dfinity-intro: "DFINITYはオープンバーチャルブロックチェーンコンピュターで、Ethereumをビジネスエリアへと拡張する事を可能にするテクノロジーです。イノベーション／革新の一部は、Blockchain Nervous System”という、オープンチェーンのガバナンス／合意形式システムをはじめ、プライベートチェーンから、パッブリックチェーンとのスマートコントラクトを可能にし、さらに、第三次クリプトのプロトコルで今までのバーチャルマシーンよりも２０倍のスピードと、無限のスケーラビリティーを可能にしました"
+    projects-dfinity-intro: "DFINITYはオープンバーチャルブロックチェーンコンピュターで、Ethereumをビジネスエリアへと拡張する事を可能にするテクノロジーです。イノベーション／革新の一部は、Blockchain Nervous Systemという、オープンチェーンのガバナンス／合意形式システムをはじめ、プライベートチェーンから、パッブリックチェーンとのスマートコントラクトを可能にし、さらに、第三次クリプトのプロトコルで今までのバーチャルマシーンよりも２０倍のスピードと、無限のスケーラビリティーを可能にしました"
     projects-dfinity-deck-en: "DFINITYデッキ　[英語]"
     projects-dfinity-deck-cn: "中国語"
     projects-dfinity-deck-ja: "日本語"
-    projects-dfinity-video-1: "threshold relay”チェーンに関係するビデオ"
+    projects-dfinity-video-1: "Threshold Relay”チェーンに関係するビデオ"
     projects-phi-subtitle: "分散商業銀行システムと安定した通貨"
-    projects-phi-intro: "Today's commercial banking system faces critical challenges that it cannot solve. These include the vast costs of branches, staff, infrastructure and compliance processes, chronic bad judgement when originating loans that leads to hugely costly bailouts, and a monopolistic tendency to impede desperately needed socially impactful financial innovation. Imagine then if commercial banks could be entirely replaced with autonomous smart contracts that use algorithms and open networks of human validators to give out loans more reliably, and if this created stable, fiat-like cryptocurrency as a side effect."
+    projects-phi-intro: "今日の商業銀行システムは解決できない深刻な問題に直面しています。 それは、支店、スタッフ、インフラストラクチャー、コンプライアンス・プロセス周りにかかる膨大なコスト、大規模な救済措置を招くローン発生時の判断、社会的影響力のある財務革新を妨げになる傾向が含まれます。 もし商業銀行が、人間の検証社のアルゴリズムとネットワークを使用することができれば、より信憑性の高いローンを提供することができます。"
     projects-phi-deck-en: "Phiデッキ "
     projects-phi-deck-cn: "中国語"
     projects-phi-video: "Phi ビデオ (DevCon 2のイベントより)"
     projects-other-title: "その他"
     projects-other-subtitle: "合弁事業、フィンテック、マイニング。。。"
-    projects-other-intro: "While DFINITY and PHI are our headline open protocol projects we have numerous projects in stealth at any one time and work with partners in industry either in joint venture or consultancy capacities. Furthermore, we aim to participate commercially in the open ecosystems that we help found. For example, String Labs plans to be a major miner of the DFINITY network, and also provide hosting of DFINITY private chains for corporate partners."
+    projects-other-intro: "DFINITYとPHIは、オープンプロトコルプロジェクトです。私たちはステルスで数多くのプロジェクトを行っており、合弁企業やコンサルタントとして業界のパートナーと協力しています。 また、私たちのオープンエコシステムは商業的に利用されることを目指しています。 たとえば、String LabsはDFINITYネットワークの主要なネットワークになることを計画しており、法人パートナー向けのDFINITYプライベートチェーンのホスティングも提供しています。"
     projects-other-contact: "お問い合わせ、ご質問はこちらまで。"
     projects-other-grant-legalese: "第一回String 補助金受賞者Legalese"
     team-title: "チーム"
     team-subtitle: "クリプト関係に興味がありますか？String Labで働いてみませんか？"
     team-dominic-title: "会長／技術責任者"
-    team-tom-title: "経営責任者／社長"
+    team-tom-title: "社長／経営責任者"
     team-timo-title: "チーフクリプトグラファー／チーフ暗号研究家"
     team-gustav-title: "主エンジニア"
     team-tomomi-title: "プロジェクトコーディネーター"
     team-jon-title: "クリエイティブリード"
     team-henry-title: "アジア営業開発"
-    team-shigeo-title: "クリプトグラファー／暗号学者"
+    team-shigeo-title: "クリプトグラファー"
     team-will-title: "経済アドバイザー"
     team-houman-title: "法務アドバイザー"
-    team-dominic-intro: "Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University."
-    team-tom-intro: "Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he graduated in Computer Science at age 14 and from business school at 20. Tom's a regular startup and crypto pundit."
-    team-gustav-intro: "Cutting his teeth with distributed systems coding at Ericsson R&D in Stockholm, Gustav moved to SumUp, a famous European payments startup in Berlin. After realizing traditional payments systems were broken, he turned to Bitcoin. Later, he became an Ethereum core dev on the Go team specializing in security."
-    team-timo-intro: "Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the decentralization bug. Timo has worked on numerous crypto products and prior to joining String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he works on Third Generation crypto systems."
-    team-tomomi-intro: "A highly dynamic coordinator of String projects and business development activity, Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from Santa Clara University. She proves you don't have to be a crypto geek to help drive String!"
-    team-jon-intro: "As an internationally renowned and influential designer, Jon has worked for many, many well known names, contributing a unique and highly original sense of style and stunning visions in print, digital and video. Jon also once worked with Dominic to create a 'growth monster' MMO that reached 3M users. A rockstar of design!"
-    team-shigeo-intro: "Shigeo is a talented cryptographer with interests in pairing implementations, x86/x64 optimization and machine learning, and the publisher of several academic works. He currently works with Timo evolving a BLS threshold signature library that sits at the core of the Dfinity 'threshold relay chain' system. A C++ rockstar!"
-    team-henry-intro: "A founding partner at a successful Hong Kong law firm (specializing in corporate finance and capital markets), Henry was previously Executive Director of compliance at ICBC. His interest in crypto made him an early team member and a go-to String mover and shaker in Asia. Henry shares an alma mater with Dominic."
-    team-will-intro: "Assistant Professor of Finance at Chicago Booth, Will Cong holds positions such as George Shultz Scholar at the Stanford Institute for Economic Policy Research and prizes from the Shmuel Kandel Award in Financial Economics to gold medals in international and national Math contests: a bona fide financial economics maestro!"
-    team-houman-intro: "Currently a Professor of Law at New York Law School, Houman is a world renowned expert on law relating to cutting-edge fintech, hedge funds and securitization. This has led him to testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin derivatives."
+    team-dominic-intro: "プロトコルギーク、コーダー、そして英国出身のシリアルテクノロジー起業家。 Dominicの最後のベンチャーであるMMOはMユーザーに成長しました。その経験により彼はスケーラブルな技術を開発することに情熱を持ちました。ドミニックは少しヒッピーですが、ロンドン大学のコンピュータサイエンスで賞を受賞しました。"
+    team-tom-intro: "連続起業家。スタートアップと暗号の専門家です。Blockchain Universityの設立者で、かつて上海から来たeBayのシニアマネージャーだった。トムは2013年にブロックチェインに興味を持ちました。彼はコンピュータサイエンスを14歳で、ビジネススクールを20歳で卒業しました。"
+    team-gustav-intro: "ガストブはかつてストックホルムのエリクソンR＆Dで分散システムを開発しており、その後ベルリンで有名なヨーロッパの有名スタートアップであるSumUpに席を移しました。従来の支払いシステムに問題があることに気づき、Bitcoinに興味をもちました。その後、セキュリティ専門のGoチームのコア開発者になりました。"
+    team-timo-intro: "ティモはドイツのアーヘン大学の数学と暗号の教授でありました。 Timoは多くの暗号製品を扱っており、String Labsに加わる前に有名なAsicBoost（http://asicboost.com/）を発明し特許を取得しています。 Stringでは、第3世代暗号システムを開発しています。"
+    team-tomomi-intro: "Stringプロジェクトとビジネス開発を行うダイナミックなコーディネーターです。以前はMenlo ParkのWomen's Startup Labに所属しており、英語と日本語のバイリンガルスピーカーです。.サンタクララ大学でコミュニケーションメジャーで卒業しました。彼女はStringを利用するために暗号のオタクになる必要がないことを証明します。"
+    team-jon-intro: "Jonは、世界的に有名なデザイナーです。独創的で印象的なデザインをプリント、デジタル、ビデオを通して表現してくれます。 JonはかつてDominicと協力して、3Mのユーザーに達したMMOを作成したチームの一人です。デザインのロックスター！"
+    team-shigeo-intro: "Shigeoは、ペアリングの実装、x86 / x64の最適化、機械学習の暗号分野の専門家であり、複数の本を出版している。 彼は現在スレッショルドリレーチェーンシステムの中核となるBLS閾値署名ライブラリを開発しています。 C ++ロックスター！"
+    team-henry-intro: "企業金融および資本市場を専門とする香港の法律事務所の創業者であり、前職はICBCコンプライアンスの専務理事でした。 暗号分野に詳しいことより、彼は早期のチームメンバーとなり、アジアでのストリングムーバーとシェイカーになりました。 ヘンリーはドミニクと同じ学校を卒業しています。"
+    team-will-intro: "ウィリアムは、スタンフォード経済政策研究所のジョージ・シュルツ奨学生であり、金融経済学のシュミール・カンデル賞の賞、国際および国内の数学大会での金メダルを受賞しています。優秀な金融経済学 マエストロ！"
+    team-houman-intro: "現在、ニューヨークのロースクール法学教授であるHoumanは、最先端のfintech、ヘッジファンド、証券化に関する法律について世界的に有名な専門家です。彼は、ヘッジファンドと金融危機について、Bitcoinの優位性に関するCFTCを議会で提案しました。"
     investors-title: "String Labsの投資家"
     investors-subtitle: "次の世代のインターネットのサポーター"
     contact-title: "お問い合わせ"
