--- a/_config.yml
+++ b/_config.yml
@@ -48,8 +48,13 @@ authors:
         avatar: dom-head2.jpg
     Tom Ding:
         display_name: Tom Ding
-        email: tom@lostdecadegames.com
+        email: tom@string.technology
         twitter: tom_ding
-        avatar: tom-head2.jpg  
+        avatar: tom-head2.jpg 
+    Tomomi Menjo:
+        display_name: Tomomi Menjo
+        email: tomomi@string.technology
+        twitter: tomomi_menjo
+        avatar: tomomi-head1.jpg 
 
 
