update speakerdeck link

--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -14,7 +14,7 @@ index:
     projects-subtitle: "知りたい方のために。"
     projects-dfinity-subtitle: "無限トラストマシーン"
     projects-dfinity-intro: "DFINITYはオープンバーチャルブロックチェーンコンピュターで、Ethereumをビジネスエリアへと拡張する事を可能にするテクノロジーです。イノベーション／革新の一部は、Blockchain Nervous Systemという、オープンチェーンのガバナンス／合意形式システムをはじめ、プライベートチェーンから、パッブリックチェーンとのスマートコントラクトを可能にし、さらに、第三次クリプトのプロトコルで今までのバーチャルマシーンよりも２０倍のスピードと、無限のスケーラビリティーを可能にしました"
-    projects-dfinity-deck-en: "DFINITYデッキ　[英語]"
+    projects-dfinity-deck-en: "DFINITYデッキ"
     projects-dfinity-deck-cn: "中国語"
     projects-dfinity-deck-ja: "日本語"
     projects-dfinity-video-1: "Threshold Relay”チェーンに関係するビデオ"
