--- a/_i18n/cn.yml
+++ b/_i18n/cn.yml
@@ -14,7 +14,7 @@ index:
     projects-subtitle: " "
     projects-dfinity-subtitle: "无限度可信任计算"
     projects-dfinity-intro: "DFINITY 是一个开放式的虚拟区块链计算机和技术。她延伸了Etheruem 以太坊生态链到广泛的商业应用场景中。我们的创新包括公链上首创的智能治理机制 - “区块链神经系统”，私链智能合约可直接调用公链合约，以及第三代区块链协议技术 - 比上一代（以太坊）提升二十倍以上的确认速度和无限吞吐扩容能力。"
-    projects-dfinity-deck-en: "DFINITY发布会幻灯片 @全球区块链峰会"
+    projects-dfinity-deck-en: "DFINITY平台之旅"
     projects-dfinity-deck-cn: "中文版"
     projects-dfinity-deck-ja: "日语版"
     projects-dfinity-video-1: "技术视频：阀值接力链"
