tech talk videos modal popup under dfinity section + multi lang support for the deck

--- a/_i18n/cn.yml
+++ b/_i18n/cn.yml
@@ -12,6 +12,11 @@ index:
     navbar-news: "新闻"
     projects-title: "我们的项目"
     projects-subtitle: " "
+    dfinity-title: "迎接DFINITY"
+    dfinity-subtitle: "世界计算平台"
+    dfinity-random-beacon-video: "随机数灯塔介绍"
+    dfinity-vrf-video: "Stanford计算机论坛: 可验证随机函数的应用：分布式网络和自治银行系统"
+    dfinity-watch-video: "观看DFINITY技术视频"    
     projects-dfinity-subtitle: "无限度可信任计算"
     projects-dfinity-intro: "DFINITY 是一个开放式的虚拟区块链计算机和技术。她延伸了Etheruem 以太坊生态链到广泛的商业应用场景中。我们的创新包括公链上首创的智能治理机制 - “区块链神经系统”，私链智能合约可直接调用公链合约，以及第三代区块链协议技术 - 比上一代（以太坊）提升二十倍以上的确认速度和无限吞吐扩容能力。"
     projects-dfinity-deck-en: "DFINITY平台之旅"
