--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -10,6 +10,11 @@ index:
     navbar-investors: "INVESTORS"
     navbar-contact: "CONTACTS"
     navbar-news: "NEWS"
+    dfinity-title: "Introducing DFINITY"
+    dfinity-subtitle: "World Compute Platform"
+    dfinity-random-beacon-video: "Introduction to Random Beacon"
+    dfinity-vrf-video: "Stanford Computer Forum: Applications of Verifiable Random Function"
+    dfinity-watch-video: "Watch DFINITY Tech Talks"
     projects-title: "OUR WORK"
     projects-subtitle: "Just in case you are wondering."
     projects-dfinity-subtitle: "Infinite Trust Machine"
