--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -10,7 +10,12 @@ index:
     navbar-investors: "投資家"
     navbar-contact: "お問い合わせ"
     navbar-news: "最新情報"
-    projects-title: "やっている事"
+    dfinity-title: "Introducing DFINITY"
+    dfinity-subtitle: "World Compute Platform"
+    dfinity-random-beacon-video: "Introduction to Random Beacon"
+    dfinity-vrf-video: "Stanford Computer Forum: Applications of Verifiable Random Function"
+    dfinity-watch-video: "Watch DFINITY Tech Talks"
+    projects-title: "やっている事"    
     projects-subtitle: "知りたい方のために。"
     projects-dfinity-subtitle: "無限トラストマシーン"
     projects-dfinity-intro: "DFINITYはオープンバーチャルブロックチェーンコンピュターで、Ethereumをビジネスエリアへと拡張する事を可能にするテクノロジーです。イノベーション／革新の一部は、Blockchain Nervous Systemという、オープンチェーンのガバナンス／合意形式システムをはじめ、プライベートチェーンから、パッブリックチェーンとのスマートコントラクトを可能にし、さらに、第三次クリプトのプロトコルで今までのバーチャルマシーンよりも２０倍のスピードと、無限のスケーラビリティーを可能にしました"
