moved all talks & videos into modal popup instead for more consistent styling

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -25,7 +25,7 @@ index:
     projects-dfinity-video-1: Video relating to "threshold relay" chains
     projects-phi-subtitle: "Decentralized commercial banking and stable currency"
     projects-phi-intro: "Today's commercial banking system faces critical challenges that it cannot solve. These include the vast costs of branches, staff, infrastructure and compliance processes, chronic bad judgement when originating loans that leads to hugely costly bailouts, and a monopolistic tendency to impede desperately needed socially impactful financial innovation. Imagine then if commercial banks could be entirely replaced with autonomous smart contracts that use algorithms and open networks of human validators to give out loans more reliably, and if this created stable, fiat-like cryptocurrency as a side effect."
-    projects-phi-deck-en: "Phi Deck"
+    projects-phi-deck-en: "Brief introduction to PHI"
     projects-phi-deck-cn: "Chinese"
     projects-phi-video: "Phi Announcement Video (DevCon 2)"
     projects-other-title: "Others"
