added dfinity brief tour talk

--- a/_i18n/cn.yml
+++ b/_i18n/cn.yml
@@ -13,6 +13,7 @@ index:
     projects-title: "我们的项目"
     projects-subtitle: " "
     dfinity-title: "迎接DFINITY"
+    dfinity-brief-tour-video: "DFINITY平台技术之旅"
     dfinity-subtitle: "世界计算平台"
     dfinity-random-beacon-video: "随机数灯塔介绍"
     dfinity-vrf-video: "Stanford计算机论坛: 可验证随机函数的应用：分布式网络和自治银行系统"
