--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -12,6 +12,7 @@ index:
     navbar-news: "最新情報"
     dfinity-title: "Introducing DFINITY"
     dfinity-subtitle: "World Compute Platform"
+    dfinity-brief-tour-video: "A Brief Tour of DFINITY" 
     dfinity-random-beacon-video: "Introduction to Random Beacon"
     dfinity-vrf-video: "Stanford Computer Forum: Applications of Verifiable Random Function"
     dfinity-watch-video: "Watch DFINITY Tech Talks"
