--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -4,7 +4,7 @@ global:
     japanese: "日本語"
 index:
     hero-title: "先進分散プロトコル＆分散アプリケーション"
-    hero-subtitle: "String Labsはクリプト専門のスタジオ、インジュベーター、投資家。"
+    hero-subtitle: "String Labsは、クリプト・スタジオ、インキュベーター、そして投資家だ。"
     navbar-projects: "プロジェクト"
     navbar-team: "チーム"
     navbar-investors: "投資家"
@@ -16,46 +16,46 @@ index:
     dfinity-random-beacon-video: "Introduction to Random Beacon"
     dfinity-vrf-video: "Stanford Computer Forum: Applications of Verifiable Random Function"
     dfinity-watch-video: "Watch DFINITY Tech Talks"
-    projects-title: "やっている事"    
-    projects-subtitle: "知りたい方のために。"
-    projects-dfinity-subtitle: "無限トラストマシーン"
-    projects-dfinity-intro: "DFINITYはオープンバーチャルブロックチェーンコンピュターで、Ethereumをビジネスエリアへと拡張する事を可能にするテクノロジーです。イノベーション／革新の一部は、Blockchain Nervous Systemという、オープンチェーンのガバナンス／合意形式システムをはじめ、プライベートチェーンから、パッブリックチェーンとのスマートコントラクトを可能にし、さらに、第三次クリプトのプロトコルで今までのバーチャルマシーンよりも２０倍のスピードと、無限のスケーラビリティーを可能にしました"
+    projects-title: "事業内容"    
+    projects-subtitle: "さらに詳しく知りたい方へ"
+    projects-dfinity-subtitle: "無限のトラスト・マシン"
+    projects-dfinity-intro: "DFINITYは、オープンバーチャルブロックチェーンコンピュターであり、ビジネスのEthereumエコシステムを拡張・重視するテクノロジーです。そのイノベーションには、Blockchain Nervous Systemを利用したオープンチェーンの管理システムをはじめ、パブリックチェーンにおいて直接コントラクトを成立できるスマートコントラクトを備えたプライベートチェーン、さらに、これまでのバーチャルマシンの20倍のスピードや無限のスケーラビリティへのロードマップを提供する第3世代のクリプトおよびプロトコルなどがあります。"
     projects-dfinity-deck-en: "DFINITYデッキ"
     projects-dfinity-deck-cn: "中国語"
     projects-dfinity-deck-ja: "日本語"
-    projects-dfinity-video-1: "Threshold Relay”チェーンに関係するビデオ"
-    projects-phi-subtitle: "分散商業銀行システムと安定した通貨"
-    projects-phi-intro: "今日の商業銀行システムは解決できない深刻な問題に直面しています。 それは、支店、スタッフ、インフラストラクチャー、コンプライアンス・プロセス周りにかかる膨大なコスト、大規模な救済措置を招くローン発生時の判断、社会的影響力のある財務革新を妨げになる傾向が含まれます。 もし商業銀行が、人間の検証社のアルゴリズムとネットワークを使用することができれば、より信憑性の高いローンを提供することができます。"
+    projects-dfinity-video-1: "「スレショルドリレー」チェーン関連ビデオ"
+    projects-phi-subtitle: "分散型商業銀行業務および安定した通貨"
+    projects-phi-intro: "今日の商業銀行システムは解決できない深刻な問題に直面しています。 それには、支店、スタッフ、インフラストラクチャ、コンプライアンス・プロセスにかかる膨大なコスト、大規模な救済措置が必要となるローン発生時の慢性的な判断ミス、社会的影響力があり、切実に求められている財務革新を妨げる独占的な傾向などがあります。 商業銀行を人のバリデータのアルゴリズムとネットワークを利用する自律的スマートコントラクトと完全に入れ替えて信頼性の高いローンを提供したり、その二次的効果として、不換紙幣のような安定した仮想通貨を生み出すことを想像してみてください。"
     projects-phi-deck-en: "Phiデッキ "
     projects-phi-deck-cn: "中国語"
     projects-phi-video: "Phi ビデオ (DevCon 2のイベントより)"
     projects-other-title: "その他"
     projects-other-subtitle: "合弁事業、フィンテック、マイニング。。。"
-    projects-other-intro: "DFINITYとPHIは、オープンプロトコルプロジェクトです。私たちはステルスで数多くのプロジェクトを行っており、合弁企業やコンサルタントとして業界のパートナーと協力しています。 また、私たちのオープンエコシステムは商業的に利用されることを目指しています。 たとえば、String LabsはDFINITYネットワークの主要なネットワークになることを計画しており、法人パートナー向けのDFINITYプライベートチェーンのホスティングも提供しています。"
+    projects-other-intro: "DFINITYとPHIは、当社の中核的なオープンプロトコルプロジェクトです。当社は常に数多くのプロジェクトを遂行しており、ジョイントベンチャーやコンサルタントとして業界のパートナーと手を組んでいます。 また、創設に協力したオープンエコシステムには商業的に参加することを目指しています。 たとえば、String LabsはDFINITYネットワークの主なマイナーになることを計画しており、企業パートナー向けDFINITYプライベートチェーンのホスティングも提供します。"
     projects-other-contact: "お問い合わせ、ご質問はこちらまで。"
-    projects-other-grant-legalese: "第一回String 補助金受賞者Legalese"
+    projects-other-grant-legalese: "第1回String 助成金受賞者：Legalese"
     team-title: "チーム"
-    team-subtitle: "クリプト関係に興味がありますか？String Labで働いてみませんか？"
-    team-dominic-title: "会長／技術責任者"
-    team-tom-title: "社長／経営責任者"
-    team-timo-title: "チーフクリプトグラファー／チーフ暗号研究家"
-    team-gustav-title: "主エンジニア"
+    team-subtitle: "時代の最先端をゆくクリプト関係の仕事に興味がありますか？ String Labで働いてみませんか？"
+    team-dominic-title: "会長／最高技術責任者"
+    team-tom-title: "最高経営責任者／社長"
+    team-timo-title: "暗号研究者"
+    team-gustav-title: "プリンシパルエンジニア"
     team-tomomi-title: "プロジェクトコーディネーター"
     team-jon-title: "クリエイティブリード"
-    team-henry-title: "アジア営業開発"
+    team-henry-title: "アジア地域事業開発"
     team-shigeo-title: "クリプトグラファー"
     team-will-title: "経済アドバイザー"
     team-houman-title: "法務アドバイザー"
-    team-dominic-intro: "プロトコルギーク、コーダー、そして英国出身のシリアルテクノロジー起業家。 Dominicの最後のベンチャーであるMMOはMユーザーに成長しました。その経験により彼はスケーラブルな技術を開発することに情熱を持ちました。ドミニックは少しヒッピーですが、ロンドン大学のコンピュータサイエンスで賞を受賞しました。"
-    team-tom-intro: "連続起業家。スタートアップと暗号の専門家です。Blockchain Universityの設立者で、かつて上海から来たeBayのシニアマネージャーだった。トムは2013年にブロックチェインに興味を持ちました。彼はコンピュータサイエンスを14歳で、ビジネススクールを20歳で卒業しました。"
-    team-gustav-intro: "ガストブはかつてストックホルムのエリクソンR＆Dで分散システムを開発しており、その後ベルリンで有名なヨーロッパの有名スタートアップであるSumUpに席を移しました。従来の支払いシステムに問題があることに気づき、Bitcoinに興味をもちました。その後、セキュリティ専門のGoチームのコア開発者になりました。"
-    team-timo-intro: "ティモはドイツのアーヘン大学の数学と暗号の教授でありました。 Timoは多くの暗号製品を扱っており、String Labsに加わる前に有名なAsicBoost（http://asicboost.com/）を発明し特許を取得しています。 Stringでは、第3世代暗号システムを開発しています。"
-    team-tomomi-intro: "Stringプロジェクトとビジネス開発を行うダイナミックなコーディネーターです。以前はMenlo ParkのWomen's Startup Labに所属しており、英語と日本語のバイリンガルスピーカーです。.サンタクララ大学でコミュニケーションメジャーで卒業しました。彼女はStringを利用するために暗号のオタクになる必要がないことを証明します。"
-    team-jon-intro: "Jonは、世界的に有名なデザイナーです。独創的で印象的なデザインをプリント、デジタル、ビデオを通して表現してくれます。 JonはかつてDominicと協力して、3Mのユーザーに達したMMOを作成したチームの一人です。デザインのロックスター！"
-    team-shigeo-intro: "Shigeoは、ペアリングの実装、x86 / x64の最適化、機械学習の暗号分野の専門家であり、複数の本を出版している。 彼は現在スレッショルドリレーチェーンシステムの中核となるBLS閾値署名ライブラリを開発しています。 C ++ロックスター！"
-    team-henry-intro: "企業金融および資本市場を専門とする香港の法律事務所の創業者であり、前職はICBCコンプライアンスの専務理事でした。 暗号分野に詳しいことより、彼は早期のチームメンバーとなり、アジアでのストリングムーバーとシェイカーになりました。 ヘンリーはドミニクと同じ学校を卒業しています。"
-    team-will-intro: "ウィリアムは、スタンフォード経済政策研究所のジョージ・シュルツ奨学生であり、金融経済学のシュミール・カンデル賞の賞、国際および国内の数学大会での金メダルを受賞しています。優秀な金融経済学 マエストロ！"
-    team-houman-intro: "現在、ニューヨークのロースクール法学教授であるHoumanは、最先端のfintech、ヘッジファンド、証券化に関する法律について世界的に有名な専門家です。彼は、ヘッジファンドと金融危機について、Bitcoinの優位性に関するCFTCを議会で提案しました。"
+    team-dominic-intro: "英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。"
+    team-tom-intro: "上海出身の連続起業家、ブロックチェーン大学の設立者であり、また、かつてはeBayのシニアマネージャーでした。トムは2013年、ブロックチェーン・ブームの波に乗り、そのときから振り返ったことはありません。コンピュータサイエンスを14歳、ビジネススクールを20歳で卒業しました。常連の起業家であり、クリプトの権威でもあります。"
+    team-gustav-intro: "グスタフは、ストックホルムにあるエリクソンの研究開発部で分散システム・コーディングの経験を積んだ後、ベルリンにあるヨーロッパでの支払いシステムの著名スタートアップ企業「SumUp」に席を移しました。従来の支払いシステムに問題があることに気づき、ビットコインに興味をもちました。その後、セキュリティを専門とする、GoチームのEthereumコア開発者になりました。"
+    team-timo-intro: "ティモは、かつてドイツのアーヘン工科大学の数学および暗号学の教授でしたが、分散分野に強い興味を持ちました。数々の暗号製品に携わり、String Labsに入社する前には有名なAsicBoost（http://asicboost.com/）を発明し、特許を取得しました。 当社では、第3世代暗号システムを開発しています。"
+    team-tomomi-intro: "トモミは、Stringプロジェクトと事業開発に携わるダイナミックなコーディネーターです。以前はMenlo Park市のWomen's Startup Labに所属しており、英語と日本語の2か国語を操ります。サンタクララ大学においてコミュニケーション学士号の優等で卒業しました。Stringを利用するために暗号オタクになる必要がないことを証明する彼女です。"
+    team-jon-intro: "ジョンは、世界的に有名なデザイナーです。数々の著名な人物を相手に、非常に独創的なスタイル、印象的なイメージをプリント、デジタル、ビデオを通して表現してきました。 ジョンはかつてドミニクと手を組んで、ユーザが3万人に達したMMOを制作したチームの一人です。デザインのロックスターと言えるでしょう。"
+    team-shigeo-intro: "シゲオは、ペアリングの実装、x86やx64の最適化、機械学習など、ペアリングで実装する暗号分野に才能を示し、複数の著作を出版しています。 現在、ティモと共に「スレッショルドリレー・チェーン」システムの中核となるBLS閾値署名ライブラリを開発しています。 C ++のロックスターと言えるでしょう。"
+    team-henry-intro: "企業金融および資本市場を専門とする香港の法律事務所の創業者であり、前職はICBCコンプライアンスの専務取締役でした。 暗号分野に詳しいことにより、ヘンリーは早期のチームメンバーとなり、アジアにおける当社の頼れる実力者となりました。 ヘンリーはドミニクと同じ大学の同窓生でもあります。"
+    team-will-intro: "ウィル・コングは、シカゴ大学ブース・ビジネス・スクール助教授。スタンフォード大学経済政策研究所のジョージ・シュルツ奨学生であり、金融経済学のシュミール・カンデル賞、国内・国際の数学コンテストで金メダルを受賞しています。本物の金融経済学の名手です。"
+    team-houman-intro: "現在、ニューヨーク法律大学院教授であるフーマンは、最先端のフィンテック、ヘッジファンド、証券化に関する法律について世界的に著名な専門家です。これにより、ヘッジファンドと金融危機について米国議会で、またビットコイン・デリバティブについて米国商品先物取引委員（CFTC）で証言しました。"
     investors-title: "String Labsの投資家"
     investors-subtitle: "次の世代のインターネットのサポーター"
     contact-title: "お問い合わせ"
