--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -2,39 +2,39 @@ global:
     chinese: "中文"
     english: "English"
     japanese: "日本語"
-index: 
-    hero-title: "ADVANCED DECENTRALIZED PROTOCOLS & DAPPS"
-    hero-subtitle: "String Labs is a crypto studio, incubator and investor."
-    navbar-projects: "PROJECTS"
-    navbar-team: "TEAM"
-    navbar-investors: "INVESTORS"
-    navbar-contact: "CONTACTS"
-    navbar-news: "NEWS"
-    dfinity-title: "Introducing DFINITY"
+index:
+    hero-title: "Advancing open protocols"
+    navbar-projects: "Projects"
+    navbar-team: "Team"
+    navbar-investors: "Investors"
+    navbar-contact: "Contact"
+    navbar-news: "News"
+    dfinity-title: "Talks & Presentations"
     dfinity-subtitle: "World Compute Platform"
-    dfinity-brief-tour-video: "A Brief Tour of DFINITY" 
+    dfinity-brief-tour-video: "A Brief Tour of DFINITY"
     dfinity-random-beacon-video: "Introduction to Random Beacon"
     dfinity-vrf-video: "Stanford Computer Forum: Applications of Verifiable Random Function"
     dfinity-watch-video: "Watch DFINITY Tech Talks"
-    projects-title: "OUR WORK"
-    projects-subtitle: "Just in case you are wondering."
-    projects-dfinity-subtitle: "Infinite Trust Machine"
+    projects-title: "Projects"
+    projects-subtitle: "Our core projects"
+    projects-learn-more: "find out more"
+    projects-dfinity-subtitle: "Infinite computing technology"
     projects-dfinity-intro: DFINITY is an open virtual blockchain computer and technology that extends and refocuses the Ethereum ecosystem for business. Innovations include open chain governance using a "Blockchain Nervous System", private chains with smart contracts that can directly call into contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide a roadmap to infinite scalability.
     projects-dfinity-deck-en: "A Brief Tour of DFINITY"
     projects-dfinity-deck-cn: "Chinese"
     projects-dfinity-deck-ja: "Japanese"
     projects-dfinity-video-1: Video relating to "threshold relay" chains
-    projects-phi-subtitle: "Decentralized commercial banking and stable currency"
+    projects-phi-subtitle: "Blockchain computer system"
     projects-phi-intro: "Today's commercial banking system faces critical challenges that it cannot solve. These include the vast costs of branches, staff, infrastructure and compliance processes, chronic bad judgement when originating loans that leads to hugely costly bailouts, and a monopolistic tendency to impede desperately needed socially impactful financial innovation. Imagine then if commercial banks could be entirely replaced with autonomous smart contracts that use algorithms and open networks of human validators to give out loans more reliably, and if this created stable, fiat-like cryptocurrency as a side effect."
     projects-phi-deck-en: "Brief introduction to PHI"
     projects-phi-deck-cn: "Chinese"
     projects-phi-video: "Phi Announcement Video (DevCon 2)"
     projects-other-title: "Others"
-    projects-other-subtitle: "Joint ventures, fintech, mining..."
+    projects-other-subtitle: "Decentralized commercial banking"
     projects-other-intro: "While DFINITY and PHI are our headline open protocol projects we have numerous projects in stealth at any one time and work with partners in industry either in joint venture or consultancy capacities. Furthermore, we aim to participate commercially in the open ecosystems that we help found. For example, String Labs plans to be a major miner of the DFINITY network, and also provide hosting of DFINITY private chains for corporate partners."
     projects-other-contact: "Contact us to chat."
     projects-other-grant-legalese: "1st String grant recipient: Legalese"
-    team-title: "TEAM"
+    team-title: "The Team"
     team-subtitle: "Love cutting edge crypto? Join us, String Labs is a great place to be!"
     team-dominic-title: "President/CTO"
     team-tom-title: "CEO"
