theme overrides, layout, typography styles

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -4,19 +4,18 @@ global:
     japanese: "日本語"
 index:
     hero-title: "Advancing open protocols"
+    hero-subtitle: "Cutting-edge crypto labs & investor"
     navbar-projects: "Projects"
     navbar-team: "Team"
     navbar-investors: "Investors"
     navbar-contact: "Contact"
     navbar-news: "News"
     dfinity-title: "Talks & Presentations"
-    dfinity-subtitle: "World Compute Platform"
     dfinity-brief-tour-video: "A Brief Tour of DFINITY"
     dfinity-random-beacon-video: "Introduction to Random Beacon"
     dfinity-vrf-video: "Stanford Computer Forum: Applications of Verifiable Random Function"
     dfinity-watch-video: "Watch DFINITY Tech Talks"
-    projects-title: "Projects"
-    projects-subtitle: "Our core projects"
+    projects-title: "Our projects"
     projects-learn-more: "find out more"
     projects-dfinity-subtitle: "Infinite computing technology"
     projects-dfinity-intro: DFINITY is an open virtual blockchain computer and technology that extends and refocuses the Ethereum ecosystem for business. Innovations include open chain governance using a "Blockchain Nervous System", private chains with smart contracts that can directly call into contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide a roadmap to infinite scalability.
