--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -5,11 +5,11 @@ global:
 index:
     hero-title: "Advancing open protocols"
     hero-subtitle: "Cutting-edge crypto labs & investor"
-    navbar-projects: "Projects"
-    navbar-team: "Team"
-    navbar-investors: "Investors"
+    navbar-projects: "Our Projects"
+    navbar-team: "The Team"
+    navbar-investment: "Investment"
     navbar-contact: "Contact"
-    navbar-news: "News"
+    navbar-research: "Research"
     dfinity-title: "Talks & Presentations"
     dfinity-brief-tour-video: "A Brief Tour of DFINITY"
     dfinity-random-beacon-video: "Introduction to Random Beacon"
