--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -55,11 +55,10 @@ index:
     team-henry-intro: "A founding partner at a successful Hong Kong law firm (specializing in corporate finance and capital markets), Henry was previously Executive Director of compliance at ICBC. His interest in crypto made him an early team member and a go-to String mover and shaker in Asia. Henry shares an alma mater with Dominic."
     team-will-intro: "Assistant Professor of Finance at Chicago Booth, Will Cong holds positions such as George Shultz Scholar at the Stanford Institute for Economic Policy Research and prizes from the Shmuel Kandel Award in Financial Economics to gold medals in international and national Math contests: a bona fide financial economics maestro!"
     team-houman-intro: "Currently a Professor of Law at New York Law School, Houman is a world renowned expert on law relating to cutting-edge fintech, hedge funds and securitization. This has led him to testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin derivatives."
-    investors-title: "Our investors"
-    investors-subtitle: "Visionary backers of the Next Internet."
     contact-title: "Send us an Email"
     contact-name: "NAME"
     contact-subject: "SUBJECT"
     contact-message: "MESSAGE"
     contact-email: "EMAIL"
     contact-send-button: "SEND MESSAGE"
+    investors-title: "Investment"
