--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -10,11 +10,13 @@ index:
     navbar-investment: "Investment"
     navbar-contact: "Contact"
     navbar-research: "Research"
+
     dfinity-title: "Talks & Presentations"
     dfinity-brief-tour-video: "A Brief Tour of DFINITY"
     dfinity-random-beacon-video: "Introduction to Random Beacon"
     dfinity-vrf-video: "Stanford Computer Forum: Applications of Verifiable Random Function"
     dfinity-watch-video: "Watch DFINITY Tech Talks"
+
     projects-title: "Our projects"
     projects-learn-more: "find out more"
     projects-dfinity-subtitle: "Infinite computing technology"
@@ -33,6 +35,7 @@ index:
     projects-other-intro: "While DFINITY and PHI are our headline open protocol projects we have numerous projects in stealth at any one time and work with partners in industry either in joint venture or consultancy capacities. Furthermore, we aim to participate commercially in the open ecosystems that we help found. For example, String Labs plans to be a major miner of the DFINITY network, and also provide hosting of DFINITY private chains for corporate partners."
     projects-other-contact: "Contact us to chat."
     projects-other-grant-legalese: "1st String grant recipient: Legalese"
+
     team-title: "The Team"
     team-subtitle: "Love cutting edge crypto? Join us, String Labs is a great place to be!"
     team-dominic-title: "President/CTO"
@@ -55,10 +58,10 @@ index:
     team-henry-intro: "A founding partner at a successful Hong Kong law firm (specializing in corporate finance and capital markets), Henry was previously Executive Director of compliance at ICBC. His interest in crypto made him an early team member and a go-to String mover and shaker in Asia. Henry shares an alma mater with Dominic."
     team-will-intro: "Assistant Professor of Finance at Chicago Booth, Will Cong holds positions such as George Shultz Scholar at the Stanford Institute for Economic Policy Research and prizes from the Shmuel Kandel Award in Financial Economics to gold medals in international and national Math contests: a bona fide financial economics maestro!"
     team-houman-intro: "Currently a Professor of Law at New York Law School, Houman is a world renowned expert on law relating to cutting-edge fintech, hedge funds and securitization. This has led him to testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin derivatives."
-    contact-title: "Send us an Email"
-    contact-name: "NAME"
-    contact-subject: "SUBJECT"
-    contact-message: "MESSAGE"
-    contact-email: "EMAIL"
-    contact-send-button: "SEND MESSAGE"
-    investors-title: "Investment"
+
+    contact-title: "Send us an email"
+    contact-name: "Name"
+    contact-subject: "Subject"
+    contact-message: "Message"
+    contact-email: "Email"
+    contact-send-button: "Send"
