--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -7,7 +7,7 @@ index:
     hero-subtitle: "String Labsは、クリプト・スタジオ、インキュベーター、そして投資家だ。"
     navbar-projects: "プロジェクト"
     navbar-team: "チーム"
-    navbar-investors: "投資家"
+    navbar-investment: "投資家"
     navbar-contact: "お問い合わせ"
     navbar-news: "最新情報"
     dfinity-title: "Introducing DFINITY"
@@ -56,8 +56,8 @@ index:
     team-henry-intro: "企業金融および資本市場を専門とする香港の法律事務所の創業者であり、前職はICBCコンプライアンスの専務取締役でした。 暗号分野に詳しいことにより、ヘンリーは早期のチームメンバーとなり、アジアにおける当社の頼れる実力者となりました。 ヘンリーはドミニクと同じ大学の同窓生でもあります。"
     team-will-intro: "ウィル・コングは、シカゴ大学ブース・ビジネス・スクール助教授。スタンフォード大学経済政策研究所のジョージ・シュルツ奨学生であり、金融経済学のシュミール・カンデル賞、国内・国際の数学コンテストで金メダルを受賞しています。本物の金融経済学の名手です。"
     team-houman-intro: "現在、ニューヨーク法律大学院教授であるフーマンは、最先端のフィンテック、ヘッジファンド、証券化に関する法律について世界的に著名な専門家です。これにより、ヘッジファンドと金融危機について米国議会で、またビットコイン・デリバティブについて米国商品先物取引委員（CFTC）で証言しました。"
-    investors-title: "String Labsの投資家"
-    investors-subtitle: "次の世代のインターネットのサポーター"
+    investment-title: "String Labsの投資家"
+    investment-subtitle: "次の世代のインターネットのサポーター"
     contact-title: "お問い合わせ"
     contact-name: "名前"
     contact-subject: "タイトル"
