investment copy, localize team intros

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -59,6 +59,9 @@ index:
     team-will-intro: "Assistant Professor of Finance at Chicago Booth, Will Cong holds positions such as George Shultz Scholar at the Stanford Institute for Economic Policy Research and prizes from the Shmuel Kandel Award in Financial Economics to gold medals in international and national Math contests: a bona fide financial economics maestro!"
     team-houman-intro: "Currently a Professor of Law at New York Law School, Houman is a world renowned expert on law relating to cutting-edge fintech, hedge funds and securitization. This has led him to testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin derivatives."
 
+    investment-title: "Decentralization is a massive movement and technology undertaking with so many fascinating pieces to it. There are already many startups, organizations and researchers working on different applications and advancing the core technology."
+    investment-intro: "We are blessed with a unique cross-disciplined team of leading cryptographers, distributed protocols researchers/engineers mathematicians and economists. What particularly interests us are those complex cross-disciplinary problems, that could become the biggest game-changer, common building blocks, and enablers massively accelerating the whole ecosystem."
+
     contact-title: "Send us an email"
     contact-name: "Name"
     contact-subject: "Subject"
