--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -4,7 +4,7 @@ global:
     japanese: "日本語"
 index:
     hero-title: "Advancing open protocols"
-    hero-subtitle: "Cutting-edge crypto Labs & investor"
+    hero-subtitle: "cutting edge crypto Labs & investor"
     navbar-projects: "Our Projects"
     navbar-team: "The Team"
     navbar-investment: "Investment"
