update layout to accommodate fixed background + inner sidebar content

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -30,11 +30,10 @@ index:
     projects-phi-deck-en: "Brief introduction to PHI"
     projects-phi-deck-cn: "Chinese"
     projects-phi-video: "Phi Announcement Video (DevCon 2)"
-    projects-other-title: "Others"
-    projects-other-subtitle: "Decentralized commercial banking"
-    projects-other-intro: "While DFINITY and PHI are our headline open protocol projects we have numerous projects in stealth at any one time and work with partners in industry either in joint venture or consultancy capacities. Furthermore, we aim to participate commercially in the open ecosystems that we help found. For example, String Labs plans to be a major miner of the DFINITY network, and also provide hosting of DFINITY private chains for corporate partners."
-    projects-other-contact: "Contact us to chat."
-    projects-other-grant-legalese: "1st String grant recipient: Legalese"
+    projects-neuron-title: "Neuron"
+    projects-neuron-subtitle: "Neuron subtitle"
+    projects-neuron-intro: "Neuron copy."
+    projects-neuron-contact: "Contact us to chat."
 
     research-title: "BLS Threshold Cryptography"
     research-intro: "DFINITY, especially Threshold Relay Chain consensus, extensively uses Stanford BLS signature as a cryptographic VRF (verifiable random function) to achieve incorruptible, unmanipulable and unpredictible randomness to select block maker and validator groups."
